--- a/index.html
+++ b/index.html
@@ -14,3 +14,12 @@
         <h1>Alurabook</h1>
     </body>
 </html>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+
+    </body>
+</html>
