--- a/index.html
+++ b/index.html
@@ -20,6 +20,39 @@
 
     </head>
     <body>
-
+        <header class="cabeçalho">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg"></a>
+        <a href="#"><img src="img/Compras.svgalt="Meus favoritos class="container__imagem"></a>
+        <a href="#"><img src="img/Usuario.svgalt="Carrinho de compras'class=container__imagem""></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil class=container__imagem"></a>
+        </header>
     </body>
 </html>
+<div class="container">
+    <input type="checkbox" id="menu" class="container__botao" />
+    <label for="menu">
+      <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+    </label>
+    <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem" />
+  </div>
+  <ul class="lista-menu">
+    <li class="lista-menu__titulo">Categorias</li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Programação</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Front-end</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Infraestrutura</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Business</a>
+    </li>
+    <li class="lista-menu__item">
+      <a href="#" class="lista-menu__link">Design & UX</a>
+    </li>
+  </ul>
+  
