--- a/index.html
+++ b/index.html
@@ -118,3 +118,147 @@
   border-radius: 0.6rem;
   font-size: 1vw;
 }
+<article class="cartao">
+  <div class="cartao__conteudo">
+      <h3>Programação</h3>
+      <div class="cartao__conteudo__pergunta">
+          <p>0 que é JavaScript?</p>
+      </div>
+      <div class="cartao__conteudo__resposta">
+          <p>0 JavaScript é uma linguagem de programação</p>
+      </div>
+  </div>
+</article>
+<article class="cartao">
+  <div class="cartao__conteudo">
+      <h3>Geografia</h3>
+      <div class="cartao__conteudo__pergunta">
+          <p>Qual a capital da França?</p>
+      </div>
+      <div class="cartao__conteudo__resposta">
+          <p>A capital da França é Paris</p>
+      </div>
+  </div>
+</article>
+<article class="cartao">
+  <div class="cartao__conteudo">
+      <h3>Programação 2.0</h3>
+      <div class="cartao__conteudo__pergunta">
+          <p>0 que é JavaScript?</p>
+      </div>
+      <div class="cartao__conteudo__resposta">
+          <p>0 JavaScript é uma linguagem de programação</p>
+      </div>
+  </div>
+</article>
+#container {
+  display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   padding: 4rem;
+   gap: 3rem;
+}
+criaCartao(
+    categoria,
+    pergunta,
+    resposta
+)
+
+criaCartao(
+    categoria,
+    pergunta,
+    resposta
+)
+
+criaCartao(
+    categoria,
+    pergunta,
+    resposta
+)
+criaCartao(
+    'Programação',
+    'O que é Python?',
+    'O Python é uma linguagem de programação'
+)
+
+criaCartao(
+    'Geografia',
+    'Qual a capital da França?',
+    'A capital da França é Paris'
+)
+
+criaCartao(
+    'Programação',
+    'O que é uma função?',
+    'Uma função é um bloco de código que executa alguma tarefa'
+)
+criaCartao(
+    'Programação',
+    'O que é Python?',
+    'O Python é uma linguagem de programação'
+)
+
+criaCartao(
+    'Geografia',
+    'Qual a capital da França?',
+    'A capital da França é Paris'
+)
+
+criaCartao(
+    'Programação',
+    'O que é uma função?',
+    'Uma função é um bloco de código que executa alguma tarefa'
+)
+<script src=""></script>
+<script src="perguntas.js"></script>
+<script src="app.js"></script>
+<script src="perguntas.js"></script>
+function criaCartao (categoria, pergunta, resposta) {
+  console.log(categoria, pergunta, resposta)
+}
+function criaCartao(categoria, pergunta, resposta) {
+  let container = document.getElementById('container')
+  let cartao = document.createElement('article')
+  cartao.className = 'cartao'
+}
+cartao.innerHTML = `
+<div class="cartao__conteudo">
+<h3>Programação</h3>
+<div class="cartao__conteudo__pergunta">
+        <p>O que é JavaScript?</p>
+</div>
+<div class="cartao__conteudo__resposta">
+        <p>O JavaScript é uma linguagem de programação</p>
+</div>
+</div>
+`
+container.appendChild(cartao)
+        <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                        <h3>Programação</h3>
+                        <div class="cartao__conteudo__pergunta">
+                                <p>O que é JavaScript?</p>
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                                <p>O JavaScript é uma linguagem de programação</p>
+                        </div>
+                </div>
+        </article> -->
+        cartao.innerHTML = `
+        <div class="cartao__conteudo">
+        <h3>${categoria}</h3>
+        <div class="cartao__conteudo__pergunta">
+                <p>${pergunta}</p>
+        </div>
+        <div class="cartao__conteudo__resposta">
+                <p>${resposta}</p>
+        </div>
+        </div>
+`
+criaCartao(
+  'Lingua inglesa',
+  'Como se diz OI em inglês?',
+  'Oi em ingles é HI (RAI)'
+) 
+let respostaEstaVisivel = false
+v
